@@ -1,4 +1,14 @@
-2004-04-26  Benjamin Otte  <otte@gnome.org>
+2004-04-27  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* Makefile.am:
+	* gst/videotestsrc/gstvideotestsrc.c:
+	(gst_videotestsrc_class_init), (gst_videotestsrc_change_state),
+	(gst_videotestsrc_init), (gst_videotestsrc_get),
+	(gst_videotestsrc_set_property), (gst_videotestsrc_get_property):
+	* gst/videotestsrc/gstvideotestsrc.h:
+          add num-buffers property
+
+	2004-04-26  Benjamin Otte  <otte@gnome.org>
 
 	* ext/mad/gstid3tag.c: (plugin_init):
 	  set id3mux rank to NONE so it doesn't confuse spider
